# lshid

./: .pre-commit-config.yaml  README.md  setup.cfg
.github/workflows/: checks.yml
lshid/: __init__.py  __main__.py
