[metadata]
name = lshid
version = 0.2.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@archlinux.org
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Operating System Kernels :: Linux
url = https://github.com/FFY00/lshid

[options]
packages = find:
python_requires = >=3.6, <4
install_requires =
    ioctl
    hid-parser==0.0.2

[options.extras_require]
filter =
    parse

[options.entry_points]
console_scripts =
    lshid = lshid.__main__:entrypoint

[flake8]
max-line-length = 127
max-complexity = 10

[mypy]
ignore_missing_imports = True
strict = True

[isort]
line_length = 127
lines_between_types = 1
lines_after_imports = 2
known_first_party = lshid
default_section = THIRDPARTY
